main-page added

--- a/source/html/pages/index.html
+++ b/source/html/pages/index.html
@@ -1,6 +1,16 @@
 ---
-layout: default
+layout: main-page
 ---
-<h1 style="text-align: center;">
-    Kagayaku Karate
-</h1>
+<div class="main-page__img-box">
+    <img class="main-page__img" src="{{root}}img/main-logo-300x300-2.png" alt="Logo" width="300" height="300">
+</div>
+
+<div class="main-page__title-box">
+    <h1 class="main-page__title">
+        International Kagayaku Karate School
+
+        <span class="main-page__title-desc">
+            The Official Site
+        </span>
+    </h1>
+</div>
