--- a/source/html/pages/index.html
+++ b/source/html/pages/index.html
@@ -23,3 +23,8 @@ layout: main-page
     {{> social
         mod = 'main-page__social'}}
 </div>
+
+<div class="main-page__nav-box">
+    {{> nav
+        mod = 'main-page__nav'}}
+</div>
